[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-manager"
version = "0.0.1"
description = "G Code Skill Manager: A lightweight CLI to install and manage agent skills from GitHub or local paths."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
{ name = "BytArch", email = "bytarchbit@gmail.com" }
]

dependencies = [
"requests >= 2.31.0",
]

[project.scripts]
gskill = "main:main"
gs = "main:main"

[tool.setuptools]
py-modules = ["main", "github_provider", "huggingface_provider"]